# libzmf

./: Makefile  README.md  libzmf.spec
src/: AUTHORS  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  libzmf.pc.in
src/docs/: Makefile.in
src/docs/doxygen/: Makefile.am  Makefile.in  doxygen.cfg
src/inc/: Makefile.am  Makefile.in
src/inc/libzmf/: Makefile.am  Makefile.in  ZMFDocument.h  libzmf.h
src/src/: Makefile.am  Makefile.in
src/src/conv/: Makefile.in
src/src/conv/raw/: Makefile.am  Makefile.in  zmf2raw.cpp  zmf2raw.rc.in
src/src/conv/svg/: Makefile.am  Makefile.in  zmf2svg.cpp  zmf2svg.rc.in
src/src/fuzz/: Makefile.am  Makefile.in  zmffuzzer.cpp
src/src/lib/: BMIHeader.cpp  BMIHeader.h  BMIParser.cpp  BMIParser.h  BMITypes.cpp  BMITypes.h  Makefile.am  Makefile.in  ZBRHeader.cpp  ZBRHeader.h  ZBRParser.cpp  ZBRParser.h  ZMF2Header.cpp  ZMF2Header.h  ZMF2Parser.cpp  ZMF2Parser.h  ZMF4Header.cpp  ZMF4Header.h  ZMF4Parser.cpp  ZMF4Parser.h  ZMFCollector.cpp  ZMFCollector.h  ZMFDocument.cpp  ZMFTypes.cpp  ZMFTypes.h  libzmf.rc.in  libzmf_utils.cpp  libzmf_utils.h
src/src/test/: Makefile.am  Makefile.in  ZMFDocumentTest.cpp  ZMFTypesTest.cpp  test.cpp
src/src/test/data/: draw2.zmf  draw3.zmf  draw4.zmf  draw5-uncompressed.zmf  draw5.zmf  zebra.zbr
